--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vue/component-compiler-utils": "^2.2.0",
     "parcel-bundler": "^1.10.1",
     "sass": "^1.14.1",
+    "standard": "^12.0.1",
     "vue-template-compiler": "^2.5.17"
   },
   "alias": {
