--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^2.2.0",
+    "chai": "^4.2.0",
+    "chai-spies": "^1.0.0",
     "parcel-bundler": "^1.10.1",
     "sass": "^1.14.1",
     "standard": "^12.0.1",
