--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "base-component",
-  "version": "0.0.1",
+  "name": "base-87",
+  "version": "0.0.3",
   "description": "\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[C\u001b[C\u001b[C\u001b[C\u001b基础UI组件",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev-test": "parcel watch test/* --no-cache & karma start",
-    "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
+    "test": "parcel build test/* --no-cache --no-minify && karma start --single-run",
+    "start": "npx parcel index.html --no-cache"
   },
   "repository": {
     "type": "git",
