--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "karma-mocha": "^1.3.0",
     "karma-sinon-chai": "^2.0.2",
     "mocha": "^5.2.0",
+    "node-sass": "^4.11.0",
     "parcel-bundler": "^1.10.1",
     "sass": "^1.14.1",
+    "sass-loader": "^7.1.0",
     "sinon": "^6.3.5",
     "sinon-chai": "^3.2.0",
     "standard": "^12.0.1",
