--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sinon-chai": "^3.2.0",
     "standard": "^12.0.1",
     "vue-template-compiler": "^2.5.17",
+    "vue-server-renderer": "2.5.17",
     "vuepress": "^0.14.8"
   },
   "alias": {
