--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test:unit:old": "vue-cli-service test:unit",
     "test:old": "vue-cli-service test:unit",
     "test": "karma start --single-run",
-    "test:unit": "karma start"
+    "test:unit": "karma start",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "dependencies": {
     "vue": "^2.5.17"
@@ -31,7 +33,8 @@
     "sass-loader": "^7.0.1",
     "sinon": "^7.2.3",
     "sinon-chai": "^3.3.0",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "vuepress": "^0.14.8"
   },
   "postcss": {
     "plugins": {
